# EcoNav-AI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: main.py  requirement.txt
apps/backend/api/: aqi.py  credits.py  network.py  route.py  simulate.py  training.py
apps/backend/core/: config.py
apps/backend/schemas/: graph_schema.py  route_schema.py
apps/backend/services/: ai_model.py  aqi_service.py  eco_route_model.py  exposure_credit.py  graph_store.py  route_service.py  training_sceduler.py  training_scheduler.py
apps/frontend/: app.js  app.py  index.html  map.html  package.json  style.css  vite.config.js
apps/frontend/components/: ai_engine.py  aqi_dashboard.py  city_manager.py  credit_card.py  environment_manager.py  map_view.py  route_card.py
apps/frontend/services/: api_client.py  aqi_client.py
apps/frontend/utils/: formatters.py
apps/simulator/: evaluator.py  run.py  trainer.py
data/: graph.json  routes.csv  training_data.csv
data/raw/: aqi_data.csv
infra/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/scripts/: run_all.sh  setup.sh
models/: eco_model.json  eco_model.pkl  eco_model.pth  fuel_model.pkl  train_model.py
requirements/: backend.txt  base.txt  frontend.txt  ml.txt
scripts/: seed_data.py  test_pipeline.py
server/: app.py
tests/: test_frontend_formatters.py  test_route_service.py  test_training_pipeline.py
